Termine la organizacion de carpetas index y inicio de sesion por terminar

--- a/css/apartado_inicio.css
+++ b/css/apartado_inicio.css
@@ -1,79 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-:root{
-    --color-fondo:white;
-    --color-header:#e2f0f9;
-    --color-footer:#e2f0f9;
-    --color-letras:black;
-}
-@font-face{
-    font-family: 'MiFuente';
-    src: url("/fuentes/Abhaya_Libre/AbhayaLibre-Regular.ttf") ; 
-    font-style: normal;
-}
+@import url(index_estilos/index__inicio__header.css);
+@import url(index_estilos/index_inicio__main.css);
+@import url(index_estilos/index_inicio__footer.css);
 
-body{
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer";
-    min-height: 100vh;
-}
-header{
-    grid-area: header;
-    display: flex;
-    background-color: var(--color-header);
-    border: 2px solid black;
-    border-radius: 180.5px;
-    margin-top: -90px;
-    align-items: center ;
-    width: 100%;
-    height: 200px;
-    
-}
-.navbar__logo{
-    height: 80px;
-    margin-top: 80px;
-    margin-left: 50px;
-}
-
-.main__titulo{
-    border-top: 2px solid rgba(0, 0, 0, 0.562) ;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.562);
-    font-family: 'MiFuente';
-    font-size: 40px;
-    text-decoration: none;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    height: 90px;
-    align-content: center;
-    align-items: center;
-    text-decoration-color: none;
-    color: var(--color-letras);
-    transition: font-size 0.3s ease ;
-
-
-}
-.main__titulo:hover{
-    font-size: 43px;
-}
-main{
-    display: flex;
-    grid-area: main;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-    background-color: var(--color-fondo);
-
-}
-footer{
-    grid-area: footer;
-    background-color: var(--color-footer);
-    height: 112.2px;
-    border-top: 2px solid black;
-}
