--- a/css/registroBar_estilos/RegistroBar__main__form.css
+++ b/css/registroBar_estilos/RegistroBar__main__form.css
@@ -1,11 +1,13 @@
+
+
 .main__formulario{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 20px;
-    gap: 60px;
-    margin-bottom: 80px;
+    margin-top: 10px;
+    gap: 30px;
+    margin-bottom: 29px;
 }
 
 
@@ -18,12 +20,14 @@
     text-align: center;
 }
 
+
 .main__formulario input::placeholder{
     text-align: center;
     font-family: "mifuente";
     font-size: 20px;
-    color: #A6A6A6;
+    color: var(--letras-form);
 }
+
 .main__formulario input:focus{
     text-align: center;
     outline: none;
@@ -31,41 +35,30 @@
     box-shadow: 0 0 5px #004B76;
 }
 
-.icono{
-    color: #A6A6A6;
-    transform: translateX(160%);
-}
 
-.formulario__btnLogin{
+
+.formulario__btnRegistro{
+    font-family: "mifuente";
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none;
+
+}
+.estilo_difuminado{
+    border-radius: 20px;
+    box-shadow: 0px  9px 6px  rgba(0, 0, 0, 0.2);
+}
+.contenedor__btnRegistro{
+    align-items: center;
     font-family: "mifuente";
     padding: 10px;
     width: 230px;
     border-radius: 20px;
-    background-color:var(--boton-iniciarSesion); 
-    box-shadow: 2px 2px 0 #021C2B ;
+    background-color:var(--boton-continuar); 
+    box-shadow: 3px 3px 0 #021C2B ;
     color: white;
     font-size: 18px;
     cursor: pointer;
-}
-.contenedor__btnLogin{
-    border-radius: 20px;
-    box-shadow: 0px  9px 6px  rgba(0, 0, 0, 0.2);
-}
-.form__opciones{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 60px;
-}
 
-.recordar_Contra{
-    display: flex;
-    justify-content: center;
-    gap: 4px;
-}
-
-.opcion__cambiarContra{
-    font-family: "mifuente";
-    text-decoration: none;
-    color: var(--boton-iniciarSesion);
 }
