--- a/css/registro_estilos/Registro__header__logo.css
+++ b/css/registro_estilos/Registro__header__logo.css
@@ -10,7 +10,7 @@
     --color-header:#e2f0f9;
     --color-footer:#e2f0f9;
     --color-letras:black;
-    --boton-iniciarSesion:#004B76;
+    --boton-continuar:#004B76;
 }
 @font-face{
     font-family: 'MiFuente';
