Deje las variables root aparte y las conecte a todos los estilos

--- a/css/Inicio_sesion.css
+++ b/css/Inicio_sesion.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(inicioSesion_estilos/InicioSesion__header__logo.css);
 @import url(inicioSesion_estilos/InicioSesion__main.css);
 @import url(inicioSesion_estilos/InicioSesion__main__form.css);
