--- a/css/apartado_inicio.css
+++ b/css/apartado_inicio.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(index_estilos/index__inicio__header.css);
 @import url(index_estilos/index_inicio__main.css);
 @import url(index_estilos/index_inicio__footer.css);
