--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(bienvenida_estilos/bienvenida__header.css);
 @import url(bienvenida_estilos/bienvenida__main.css);
 @import url(bienvenida_estilos/bienvenida__footer.css);
