--- a/css/registro2.css
+++ b/css/registro2.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(registro2_estilos/Registro2__header__logo.css);
 @import url(registro2_estilos/Registro2__main.css);
 @import url(registro2_estilos/Registro2__main__form.css);
