--- a/css/registroBar_fin.css
+++ b/css/registroBar_fin.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(registroBar_fin_estilos/RegistroBar_fin__header__logo.css);
 @import url(registroBar_fin_estilos/RegistroBar_fin__main.css);
 @import url(registroBar_fin_estilos/RegistroBar_fin__main__form.css);
