--- a/css/registro_produc.css
+++ b/css/registro_produc.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(registro_produc_estilos/RegistroProduc__header__logo.css);
 @import url(registro_produc_estilos/RegistroProduc__main.css);
 @import url(registro_produc_estilos/RegistroProduc__main__form.css);
