--- a/css/registro.css
+++ b/css/registro.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(registro_estilos/Registro__header__logo.css);
 @import url(registro_estilos/Registro__main.css);
 @import url(registro_estilos/Registro__main__form.css);
