--- a/css/registroBar.css
+++ b/css/registroBar.css
@@ -1,3 +1,4 @@
+@import url(Variables_root/Root.css);
 @import url(registroBar_estilos/RegistroBar__header__logo.css);
 @import url(registroBar_estilos/RegistroBar__main.css);
 @import url(registroBar_estilos/RegistroBar__main__form.css);
