quité las etiqueta de a que tenia como botones y en el form coloque en el action la ruta

--- a/css/registroBar_fin_estilos/RegistroBar_fin__main__form.css
+++ b/css/registroBar_fin_estilos/RegistroBar_fin__main__form.css
@@ -35,7 +35,7 @@
 
 
 .fondo-blur {
-    position: absolute; /*para sacarlo del flujo y moverlo para donde yo queira*/
+    position: absolute; /*para sacarlo del flujo y moverlo para donde yo quiera*/
     height:75vh ;
     width: 100%;
     backdrop-filter: blur(4px);
@@ -65,11 +65,15 @@
     position: absolute;
     bottom: 30px;
     right: 80px;
-    padding: 20px;
+    height: 60px;
     width: 180px;
     border-radius: 50px;
     background-color: var(--color-header);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 
 .boton_nex{
