--- a/view/Bienvenida.html
+++ b/view/Bienvenida.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROYECTO INVENTARIO</title>
-    <link rel="stylesheet" href="css/bienvenida.css">
+    <link rel="stylesheet" href="/css/bienvenida.css">
 
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <img class="navbar__logo" src="assets/img/LOGO.png" alt="logo_sistema">
+            <img class="navbar__logo" src="/assets/img/LOGO.png" alt="logo_sistema">
         </nav>
 
     </header>
     <main>
         <h1 class="main__bienvenida">Bienvenido, Michael</h1>
         <div class="contenedor_titulo">
-            <a class="main__sistema"  href="registroBar.html">
+            <a class="main__sistema"  href="/view/registroBar.html">
                 Contabilidad-Sistematica
             </a>
         </div>
 
-        <img src="assets/img/LOGO.png" alt="logo">
+        <img src="/assets/img/LOGO.png" alt="logo">
 
     </main>
     <footer>
