--- a/view/Inicio_sesion.html
+++ b/view/Inicio_sesion.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesion</title>
-    <link rel="stylesheet" href="css/Inicio_sesion.css">
+    <link rel="stylesheet" href="/css/Inicio_sesion.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <img class="navbar__logo" src="assets/img/LOGO.png" alt="logo_sistema">
+            <img class="navbar__logo" src="/assets/img/LOGO.png" alt="logo_sistema">
         </nav>
 
     </header>
@@ -20,10 +20,10 @@
         <h2 class="main__subtitulo">Contabilidad-Sistematica</h2>
         <section class="seccion__inicioResgistrar">
             <a href="#" class="inicio_sesion">Iniciar sesion</a>
-            <a href="registroUser.html" class="registrarse">Registrarse</a>
+            <a href="/view/registroUser.html" class="registrarse">Registrarse</a>
         </section>
 
-        <form class="main__formulario" >
+        <form class="main__formulario"  >
             <div class="campo">
                 <label for="email" class="formulario__email__icon"></label>
                 <i class="fas fa-envelope icono"></i>
