--- a/view/Registro_produc.html
+++ b/view/Registro_produc.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de los productos</title>
-    <link rel="stylesheet" href="css/registro_produc.css">
+    <link rel="stylesheet" href="/css/registro_produc.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <img class="navbar__logo" src="assets/img/LOGO.png" alt="logo_sistema">
+            <img class="navbar__logo" src="/assets/img/LOGO.png" alt="logo_sistema">
         </nav>
     </header>
     <main>
@@ -18,7 +18,7 @@
         <h2 class="main__subtitulo">de: </h2>
         <h3 class="main__nameBar">fuente de soda la jenny</h3>
         <section class="main__contenedorForm">
-            <form class="main__formulario" enctype="multipart/form-data"> <!-- solo se pueden adjuntar imagenes -->
+            <form class="main__formulario" action="/view/Produc_registrado.html" enctype="multipart/form-data" > <!-- solo se pueden adjuntar imagenes -->
                 <div class="campo">
                     <label for="name" class="formulario__nombre"></label>
                     <input id="name" class="form__input_name" type="text" required placeholder="Nombre del producto">
@@ -32,9 +32,7 @@
                     <input type="file" id="imagen" accept="image/*" required>
                     <div id="preview" class="cuadro-imagen"></div>
                 </div>
-                <div class="contenedor__btnfinalizar">
-                    <a href="#" class="formulario__btnfin" >Finalizar</a>
-                </div>
+                <button class="contenedor__btnfinalizar">Finalizar</button>
             </form>
         </section>
     </main>
