--- a/view/registroBar_fin.html
+++ b/view/registroBar_fin.html
@@ -3,38 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro 2</title>
-    <link rel="stylesheet" href="css/registroBar.css">
+    <title>Registro bar finalizado</title>
+    <link rel="stylesheet" href="/css/registroBar_fin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <img class="navbar__logo" src="assets/img/LOGO.png" alt="logo_sistema">
+            <img class="navbar__logo" src="/assets/img/LOGO.png" alt="logo_sistema">
         </nav>
 
     </header>
     <main>
         <h1 class="main__titulo">Registre su bar</h1>
         <h2 class="main__subtitulo">Contabilidad-Sistematica</h2>
-
-
+        
+        <section class="fondo-blur">
+            <div class="registro_confirmacion">
+                <h2>Registro finalizado con satisfacción</h2>
+                <img src="/assets/img/icono_correcto.png" alt="icono_correcto">
+            </div>
+            <div class="contenedor_boton">
+                <a class="boton_nex" href="/view/Registro_produc.html">SIGUENTE --></a>
+            </div>
+            
+        </section>
         <form class="main__formulario">
             <div class="campo">
                 <label for="name" class="formulario__nombre"></label>
                 <input id="name" class="form__input_name" type="text" required placeholder="Nombre del bar">
             </div>
-
             <div class="campo">
                 <label for="direccion" class="formulario__direccion"></label>
                 <input id="direccion" class="form__input_direccion" type="text"    required placeholder="Direccion">      
             </div>
 
             <div class="estilo_difuminado">
-                <div class="contenedor__btnRegistro">
-                    <a href="registroBar_fin.html" class="formulario__btnRegistro" >Finalizar</a>
-                </div>
+                <button class="contenedor__btnRegistro">Finalizar</button>
             </div>
             
         </form>
