--- a/view/registroUser2.html
+++ b/view/registroUser2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro 2</title>
-    <link rel="stylesheet" href="css/registro2.css">
+    <link rel="stylesheet" href="/css/registro2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <img class="navbar__logo" src="assets/img/LOGO.png" alt="logo_sistema">
+            <img class="navbar__logo" src="/assets/img/LOGO.png" alt="logo_sistema">
         </nav>
 
     </header>
@@ -19,11 +19,11 @@
         <h1 class="main__titulo">Inicio sesion</h1>
         <h2 class="main__subtitulo">Contabilidad-Sistematica</h2>
         <section class="seccion__inicioResgistrar">
-            <a href="Inicio_sesion.html" class="inicio_sesion">Iniciar sesion</a>
+            <a href="/view/Inicio_sesion.html" class="inicio_sesion">Iniciar sesion</a>
             <a href="#" class="registrarse">Registrarse</a>
         </section>
 
-        <form class="main__formulario">
+        <form class="main__formulario" action="/view/Bienvenida.html">
 
             <div>
                 <label for="telefono" class="Formulario__telefono"></label>
@@ -32,7 +32,7 @@
 
             <div>
                 <label for="telefono" class="Formulario__telefono"></label>
-                <input id="text" class="form__input_telefono" required placeholder="Telefono 2">
+                <input id="text" class="form__input_telefono"  placeholder="Telefono 2">
             </div>
 
             <div class="campo">
@@ -42,7 +42,7 @@
 
             <div class="campo">
                 <label for="email" class="formulario__email__icon"></label>
-                <input id="email" class="form__input_email" type="email"    required placeholder="Correo 2">      
+                <input id="email" class="form__input_email" type="email"    placeholder="Correo 2">      
             </div>
 
             <div class="campo">
@@ -51,9 +51,7 @@
             </div>
 
             <div class="estilo_difuminado">
-                <div class="contenedor__btnRegistro">
-                    <a href="Bienvenida.html" class="formulario__btnRegistro" >Finalizar</a>
-                </div>
+                <button class="contenedor__btnRegistro">Finalizar</button>
             </div>
             
         </form>
