--- a/css/Variables_root/Root.css
+++ b/css/Variables_root/Root.css
@@ -1,9 +1,10 @@
 :root{
-    --color-fondo:white;
+    --color-fondo:rgba(255, 255, 255, 0.356);
     --color-header:#e2f0f9;
     --color-footer:#e2f0f9;
     --color-letras:black;
     --boton-continuar:#004B76;
     --letras-form: #A6A6A6;
     --boton-iniciarSesion:#004B76;
+    --boton-finalizado:#32BA7C;
 }
