--- a/view/Produc_registrado.html
+++ b/view/Produc_registrado.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
-<body>    <header>
+<body>    
+    <header>
         <nav class="navbar">
             <img class="navbar__logo" src="/assets/img/LOGO.png" alt="logo_sistema">
         </nav>
@@ -16,21 +17,23 @@
     <main>
         <h1 class="main__titulo">Contabilidad-Sistematica</h1>
         
-        <section class="main__contenedorForm">
+        <section class="main__section__prd_regist">
             <div>
                 <h2>PRODUCTO REGISTRADO <br> CON EXITO</h2>
                 <img src="/assets/img/icono_correcto.png" alt="img_correcto">
             </div>
         </section>
-        <section>
-            <div>
+        <section class="main__section__rutas">
+            <a href="/view/Registro_produc.html" class="section__agg">
                 <i class="fa-solid fa-plus"></i>
                 <h3>Agregar otro producto</h3>
-            </div>
+            </a>
 
-            <div>
+            <a href="/view/" class="section__fin_regis">
+                <i class="fa-solid fa-circle-check"></i>
+                <h3>Finalizar el registro <br> de productos</h3>
                 
-            </div>
+            </a>
             
         </section>
     </main>
