--- a/view/Registro_produc.html
+++ b/view/Registro_produc.html
@@ -18,7 +18,7 @@
         <h2 class="main__subtitulo">de: </h2>
         <h3 class="main__nameBar">fuente de soda la jenny</h3>
         <section class="main__contenedorForm">
-            <form class="main__formulario" action="/view/Produc_registrado.html" enctype="multipart/form-data" > <!-- solo se pueden adjuntar imagenes -->
+            <form class="main__formulario" action="/view/Produc_registrado.html"  > 
                 <div class="campo">
                     <label for="name" class="formulario__nombre"></label>
                     <input id="name" class="form__input_name" type="text" required placeholder="Nombre del producto">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="campo_img">
                     <label for="imagen" class="boton_img">Imagen del producto</label>
-                    <input type="file" id="imagen" accept="image/*" required>
+                    <input type="file" id="imagen" accept="image/*" >
                     <div id="preview" class="cuadro-imagen"></div>
                 </div>
                 <button class="contenedor__btnfinalizar">Finalizar</button>
