Agregue las alertas de que fiazalizo correctamente el formulario como producto registrado y registro de productos finalizado con exido donde puedes agregar otro o finalizarlo y seguir registrando gastos y pedidos que el bar puede hacer para que a la hora de hacer el inventario pueda facilmente hacerlo con todo ya registrado y asi mismo lo hice con gastos y pedidos a proveedores

--- a/view/Gasto_registrado.html
+++ b/view/Gasto_registrado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Producto registrado</title>
-    <link rel="stylesheet" href="/css/Produc_registrado.css">
+    <link rel="stylesheet" href="/css/Gasto_registrado.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -19,19 +19,19 @@
         
         <section class="main__section__prd_regist">
             <div>
-                <h2>PRODUCTO REGISTRADO <br> CON EXITO</h2>
+                <h2>GASTO REGISTRADO <br> CON EXITO</h2>
                 <img src="/assets/img/icono_correcto.png" alt="img_correcto">
             </div>
         </section>
         <section class="main__section__rutas">
-            <a href="/view/Registro_produc.html" class="section__agg">
+            <a href="/view/Registro_gastos.html" class="section__agg">
                 <i class="fa-solid fa-plus"></i>
-                <h3>Agregar otro producto</h3>
+                <h3>Agregar otro gasto</h3>
             </a>
 
-            <a href="/view/Regis_produc_finaliz.html" class="section__fin_regis">
+            <a href="/view/Regis_gastos_finaliz.html" class="section__fin_regis">
                 <i class="fa-solid fa-circle-check"></i>
-                <h3>Finalizar el registro <br> de productos</h3>
+                <h3>Finalizar el registro <br> de gastos</h3>
                 
             </a>
             
